--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,7 @@ dist: trusty
 language: php
 
 php:
-  - 5.6
-  - 7.0
   - 7.1
-  - 7.2
-  - hhvm
 
 # This triggers builds to run on the new TravisCI infrastructure.
 # See: http://docs.travis-ci.com/user/workers/container-based-infrastructure/
@@ -14,12 +10,14 @@ sudo: false
 
 ## requires mac os pbcopy and pbpaste commands.
 os: osx
-
-os: osx
+osx_image: xcode9.3beta
 
 before_install:
+- brew update
+- brew outdated
+- brew upgrade
 - brew install git-lfs
-- brew install ${TRAVIS_PHP_VERSION}
+- brew install homebrew/php/php71
 
 
 env:
@@ -27,9 +25,7 @@ env:
   - COMPOSER_OPTS="--prefer-lowest"
 
 install:
-  - if [[ "${TRAVIS_PHP_VERSION}" == "5.5" ]]; then composer require phpunit/phpunit:^4.8.36 phpspec/phpspec:^2 --prefer-dist --update-with-dependencies; fi
-  - if [[ "${TRAVIS_PHP_VERSION}" == "7.2" ]]; then composer require phpunit/phpunit:^6.0 --prefer-dist --update-with-dependencies; fi
-  - travis_retry composer update --prefer-dist $COMPOSER_OPTS
+    - travis_retry composer update --prefer-dist $COMPOSER_OPTS
 
 before_script:
   - git lfs pull
