--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 dist: trusty
 language: php
 
-php:
-  - 7.1
 
 # This triggers builds to run on the new TravisCI infrastructure.
 # See: http://docs.travis-ci.com/user/workers/container-based-infrastructure/
@@ -18,6 +16,7 @@ before_install:
 - brew upgrade
 - brew install git-lfs
 - brew install homebrew/php/php71
+- brew install composer
 
 
 env:
