--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ os: osx
 osx_image: xcode9.3beta
 
 before_install:
-- sudo chmod -R 770 /usr/local/sbin
+- sudo mkdir /usr/local/sbin
+- sudo chmod 770 /usr/local/sbin
 - brew update
 - brew outdated
 - brew upgrade
