--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ os: osx
 osx_image: xcode9.3beta
 
 before_install:
-- sudo mkdir /usr/local/sbin
-- sudo chmod 770 /usr/local/sbin
+- mkdir /usr/local/sbin
+- ls /usr/local
 - brew update
 - brew outdated
 - brew upgrade
