--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -18,6 +18,8 @@ checks:
         fix_doc_comments: true
 
 tools:
+    php_analyzer: true
     external_code_coverage:
         timeout: 600
         runs: 1
+
